package com.alancortez.project.utils;

public enum USER_ROLE {
    STAFF,
    ADMIN
}
