@startuml
'https://plantuml.com/class-diagram

enum USER_ROLE {
    STAFF
    ADMIN
}

enum PRIVILEGES {
    CREATE_INGREDIENT
    READ_INGREDIENT
    UPDATE_INGREDIENT
    DELETE_INGREDIENT
    CREATE_RECIPE
    READ_RECIPE
    UPDATE_RECIPE
    DELETE_RECIPE
}

abstract User {
    # id: Integer
    # username: String
    # password: String
    # role: USER_ROLE
    # dateCreated: Date

    + getID(): Integer
    + setID(id: Integer): void
    + getUsername(): String
    + setUsername(userName: String): void
    + getPassword(): String
    + setPassword(password: String): void
    + getRole(): USER_ROLE
    + setRole(role: USER_ROLE): void
    + getDateCreated(): Date
    + accept(UserActionVisitor visitor): void
}

class Privilege {
    - canCreateIngredient: Boolean
    - canReadIngredient: Boolean
    - canUpdateIngredient: Boolean
    - canDeleteIngredient: Boolean
    - canCreateRecipe: Boolean
    - canReadRecipe: Boolean
    - canUpdateRecipe: Boolean
    - canDeleteRecipe: Boolean

    - Privilege(privileges: PrivilegeBuilder): void

    + setCreateIngredientAccess(canCreateIngredient: Boolean): void
    + getCreateIngredientAccess(): Boolean
    + setReadIngredientAccess(canReadIngredient: Boolean): void
    + getReadIngredientAccess(): Boolean
    + setUpdateIngredientAccess(canUpdateIngredient: Boolean): void
    + getUpdateIngredientAccess(): Boolean
    + setDeleteIngredientAccess(canDeleteIngredient: Boolean): void
    + getDeleteIngredientAccess(): Boolean
    + setCreateRecipeAccess(canCreateRecipe: Boolean): void
    + getCreateRecipeAccess(): Boolean
    + setReadRecipeAccess(canReadRecipe: Boolean): void
    + getReadRecipeAccess(): Boolean
    + setUpdateRecipeAccess(canUpdateRecipe: Boolean): void
    + getUpdateRecipeAccess(): Boolean
    + setDeleteRecipeAccess(canDeleteRecipe: Boolean): void
    + getDeleteRecipeAccess(): Boolean
}

class PrivilegeBuilder {
    - canCreateIngredient: Boolean
    - canReadIngredient: Boolean
    - canUpdateIngredient: Boolean
    - canDeleteIngredient: Boolean
    - canCreateRecipe: Boolean
    - canReadRecipe: Boolean
    - canUpdateRecipe: Boolean
    - canDeleteRecipe: Boolean

    + allowCreateIngredient(): PrivilegeBuilder
    + allowReadIngredient(): PrivilegeBuilder
    + allowUpdateIngredient(): PrivilegeBuilder
    + allowDeleteIngredient(): PrivilegeBuilder
    + allowCreateRecipe(): PrivilegeBuilder
    + allowReadRecipe(): PrivilegeBuilder
    + allowUpdateRecipe(): PrivilegeBuilder
    + allowDeleteRecipe(): PrivilegeBuilder

    + build(): Privilege
}

Privilege +-- PrivilegeBuilder

class Staff {
    - staffID: Integer
    - privilege: Privilege

    + getPrivilege(): Privilege
    + setPrivilege(privilege: Privilege): void
    + getStaffID(): Integer
    + accept(UserActionVisitor visitor): void
    + setDateUpdated(): void
}

class Admin {
    - adminID: Integer

    + getAdminID(): Integer
    + accept(UserActionVisitor visitor): void
}

class UserFactory {
    - {static} instance: UserFactory
    + {static} getInstance(): UserFactory

    + getUserType(role: USER_ROLE)
    + createNewUser(userName: String, password: String, role: USER_ROLE)
}

UserFactory *-- UserFactory

interface UserActionVisitor {
    + visit(staff: Staff): void
    + visit(admin: Admin): void
}

class PrivilegeToggleVisitor {
    - privilegesToToggle: PRIVILEGES[]
    - targetStaffID: String
    - actingAdmin: Admin

    + PrivilegeToggleVisitor(privilegesToToggle: PRIVILEGES[], targetStaffID: String): void

    + void visit(staff: Staff)
    + void visit(admin: Admin)
}

PrivilegeToggleVisitor ..|> UserActionVisitor

Staff *-- Privilege
User <|-- Staff
User <|-- Admin

@enduml